# SDS-LLM

./: .gitignore  CONTRIBUTING.md  PLAN_tensor_drafter.md  README.md  analyze.py  analyze_deep.py  analyze_squad.py  analyze_wiki.py  analyze_xsum.py  demo_simulation.py  handout_squad.md  handout_squad.txt  handout_xsum.md  handout_xsum.txt  presentation_squad.md  presentation_xsum.md  pyproject.toml  run.py  simulator.py  test_interfaces.py
.github/workflows/: ci.yml
docs/: architecture.md  presentation_squad.txt  presentation_wiki_lao.md  presentation_wiki_lao.txt  presentation_xsum.txt
docs/planning/: wiki_lao.md
docs/results/: wiki_lao.md
experiments/samsum/: config.json
experiments/samsum/artifacts/: results.json
experiments/squad/: full_analysis.json
experiments/squad/artifacts/: results.json
experiments/wiki_demo/artifacts/: results.json
experiments/wiki_lo/: full_analysis.json
experiments/xsum/: config.json  full_analysis.json
experiments/xsum/artifacts/: results.json
scripts/: analyze.py  new_drafter.py  run_benchmark.py
spec-decode-cnn-dailymail/: run.py  run_analysis.py
spec-decode-cnn-dailymail/artifacts/: mismatch_analysis_report.json
spec-decode-cnn-dailymail/configs/: simulator_config.json
spec-decode-cnn-dailymail/docs/: architecture.md
spec-decode-cnn-dailymail/src/: simulator.py
spec-decode-cnn-dailymail/tests/: test_interfaces.py
src/: interfaces.py  simulator.py
src/datasets/: __init__.py  wiki.py  wiki_demo.py  xsum.py
src/specdecode/: __init__.py  interfaces.py  simulator.py
src/specdecode/analysis/: __init__.py  cnn_dailymail.py  common.py  engine.py  samsum.py  squad.py  summary.py  wiki.py  xsum.py
src/specdecode/datasets/: __init__.py  cnn_dailymail.py  samsum.py  squad.py  wiki.py
src/specdecode/interface/: __init__.py  abstractDrafter.py  abstractPlayback.py  abstractTensorDrafter.py  abstractTensorVerifier.py  abstractVerifier.py
src/specdecode/simulator/: __init__.py
src/specdecode/simulator/drafter/: __init__.py  nGramDrafter.py  precomputeTensorNGramDrafter.py  tensorNGramDrafter.py  vectorizeTensorNGramDrafter.py
src/specdecode/simulator/metrics/: __init__.py  playbackMetrics.py
src/specdecode/simulator/playback/: __init__.py  speculativePlayback.py
src/specdecode/simulator/verifier/: __init__.py  greedyVerifier.py  tensorGreedyVerifier.py
tests/: test_interface_contracts.py  test_interfaces.py  test_tensor_interfaces.py
tests/datasets/: test_wiki.py
tests/drafter/: test_nGramDrafter.py  test_optimizedNGramDrafter.py  test_precomputeTensorNGramDrafter.py  test_vectorizeTensorNGramDrafter.py
tests/interface/: test_contracts.py
tests/playback/: test_speculativePlayback.py
tests/verifier/: test_greedyVerifier.py
