[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-decode-greedy"
version = "0.1.0"
description = "Speculative Decoding Simulator (Greedy Speculative Decoding)"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "faith-cr" }]
keywords = ["speculative-decoding", "tokenizer", "nlp", "simulator"]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "pre-commit>=3.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["src/specdecode/analysis/*", "src/specdecode/datasets/*"]